# serializer version: 1
# name: TestCreate.test_ok[force_choice][mongo]
  dict({
    '_id': 'bf1b993c',
    'all_read': True,
    'all_write': True,
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': 2,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 1,
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': dict({
      'id': 0,
    }),
    'subtractions': list([
      'apple',
    ]),
    'uploads': list([
      dict({
        'id': 1,
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'iimi': 'none',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestCreate.test_ok[none][mongo]
  dict({
    '_id': 'bf1b993c',
    'all_read': True,
    'all_write': True,
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 1,
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': dict({
      'id': 0,
    }),
    'subtractions': list([
      'apple',
    ]),
    'uploads': list([
      dict({
        'id': 1,
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'iimi': 'none',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestCreate.test_ok[users_primary_group][mongo]
  dict({
    '_id': 'bf1b993c',
    'all_read': True,
    'all_write': True,
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 1,
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': dict({
      'id': 0,
    }),
    'subtractions': list([
      'apple',
    ]),
    'uploads': list([
      dict({
        'id': 1,
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'iimi': 'none',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: test_finalize
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': 'not_approximately_now_datetime',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': 'not_approximately_now_datetime',
      'id': 1,
      'progress': 100,
      'state': <JobState.FAILED: 'failed'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': <Workflow.CREATE_SAMPLE: 'create_sample'>,
    }),
    'labels': list([
      dict({
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      }),
    ]),
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': dict({
      'bases': list([
        list([
          1543,
        ]),
      ]),
      'composition': list([
        list([
          6372,
        ]),
      ]),
      'count': 7069,
      'encoding': 'OuBQPPuwYimrxkNpPWUx',
      'gc': 34222440,
      'length': list([
        3237,
      ]),
      'sequences': list([
        7091,
      ]),
    }),
    'reads': list([
      dict({
        'download_url': '/samples/test/reads/reads.fq.gz',
        'id': 1,
        'name': 'reads.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 15,
        'upload': dict({
          'created_at': 'not_approximately_now_datetime',
          'id': 1,
          'name': 'test.fq.gz',
          'ready': True,
          'removed': True,
          'removed_at': 'not_approximately_now_datetime',
          'reserved': False,
          'size': 723988,
          'type': 'reads',
          'uploaded_at': 'not_approximately_now_datetime',
          'user': dict({
            'handle': 'zwilliams',
            'id': 2,
          }),
        }),
        'uploaded_at': 'not_approximately_now_datetime',
      }),
    ]),
    'ready': True,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
      dict({
        'id': 'pear',
        'name': 'Pear',
      }),
    ]),
    'uploads': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.PENDING: 'pending'>,
      'pathoscope': <WorkflowState.COMPLETE: 'complete'>,
    }),
  })
# ---
